--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
   <br>
   <br>
   <br>
-  <div>
+  <div class="topic-title">
     <h1>TOPIC</h1>
-    <h2>Welcome to our site!</h2>
+    <p class="lead"> Welcome to our site! </p>
   </div>
 
   <div id="ordered-list">
