--- a/index.html
+++ b/index.html
@@ -27,16 +27,19 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Another Link</a>
+          <a class="nav-link" href="#">Our Favourites</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Your Suggestions</a>
         </li>
       </ul>
     </div>
   </nav>
   <br>
-  
+
   <div class="topic-title">
     <h1>TOPIC</h1>
     <p class="lead"> Welcome to our site! </p>
