--- a/Our_Favourites.html
+++ b/Our_Favourites.html
@@ -23,14 +23,14 @@
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Our_Favourites.html">Our Favourites</a>
+          <a class="nav-link active" href="Our_Favourites.html">Our Favourites</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Your Suggestions</a>
