--- a/Our_Favourites.html
+++ b/Our_Favourites.html
@@ -39,3 +39,8 @@
     </div>
   </nav>
   <br>
+  <br>
+  <br>
+  <div class="map of dessert places">
+    <h2> Our Favourite Dessert Places in Bath </h2>
+    <p> The map below shows our favourite places to enjoy dessert in Bath! </p>
