--- a/Our_Favourites.html
+++ b/Our_Favourites.html
@@ -44,3 +44,6 @@
   <div class="map of dessert places">
     <h2> Our Favourite Dessert Places in Bath </h2>
     <p> The map below shows our favourite places to enjoy dessert in Bath! </p>
+    <iframe src="https://www.google.com/maps/d/embed?mid=1u84eFgncUFvR34t2kHtYeeJ_OLzeveEI&hl=en" width="640" height="480"></iframe>
+  </div>
+  
