--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     </div>
   </nav>
   <br>
-
+  
   <div class="topic-title">
-    <h1>welcome</h1>
+    <h1>TOPIC</h1>
     <p class="lead"> Welcome to our site! </p>
   </div>
 
