--- a/index.html
+++ b/index.html
@@ -45,14 +45,18 @@
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="images/picture1.jpeg" alt="First slide">
+      <img class="d-block w-100" src="images/picture1.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src=".../800x400?auto=yes&bg=666&fg=444&text=Second slide" alt="Second slide">
+      <img class="d-block w-100" src="image/picture2.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
+      <img class="d-block w-100" src="image/picture3.jpg" alt="Third slide">
     </div>
+    <img class="d-block w-100" src="image/picture4.jpg" alt="Third slide">
+  </div>
+  <img class="d-block w-100" src="image/picture5.jpg" alt="Third slide">
+</div>
   </div>
 </div>
 
