--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous"></script>"
 </head>
 
 <body>
