--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 
   <title>Group Website</title>
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+
+
 
 </head>
 
@@ -42,23 +43,35 @@
     <p class="lead"> Welcome to our site! </p>
   </div>
 
+
+
+
+
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+
+
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="images/picture1.jpg" alt="First slide">
+      <img class="d-block w-100" src="images/picture1.jpeg" alt="First slide">
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="image/picture2.jpg" alt="Second slide">
+  <div class="carousel-item">
+      <img class="d-block w-100" src="images/picture2.jpeg" alt="Second slide">
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="image/picture3.jpg" alt="Third slide">
+<div class="carousel-item">
+      <img class="d-block w-100" src="images/picture3.jpeg" alt="Third slide">
     </div>
-    <img class="d-block w-100" src="image/picture4.jpg" alt="Third slide">
+  <div class="carousel-item">
+      <img class="d-block w-100" src="images/picture4.jpeg" alt="Fourth slide">
+    </div>
+  <div class="carousel-item">
+      <img class="d-block w-100" src="images/picture5.jpeg" alt="Fifth slide">
+    </div>
   </div>
-  <img class="d-block w-100" src="image/picture5.jpg" alt="Third slide">
+
 </div>
-  </div>
-</div>
+
+
+
 
   <div id="ordered-list">
     <p>insert text
@@ -75,5 +88,10 @@
   <p>
     Follow on <a href="www.github.com">github</a>
   </p>
+
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js" integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P" crossorigin="anonymous"></script>
+
 </body>
 </html>
