--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <br>
 
   <div class="topic-title">
-    <h1>TOPIC</h1>
+    <h1>BATH TREATS</h1>
     <p class="lead"> Welcome to our site! </p>
   </div>
 
@@ -53,24 +53,36 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="d-block w-100" src="images/picture1.jpeg" alt="First slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>First slide label</h5>
+          <p>eating is life</p>
+        </div>
     </div>
-  <div class="carousel-item">
-      <img class="d-block w-100" src="images/picture2.jpeg" alt="Second slide">
+    <div class="carousel-item">
+       <img class="d-block w-100" src="images/picture2.jpeg" alt="Second slide">
+        <h5>Second slide label</h5>
+        <p>blablabla</p>
+      </div>
     </div>
-<div class="carousel-item">
+    <div class="carousel-item">
       <img class="d-block w-100" src="images/picture3.jpeg" alt="Third slide">
+      <h5>Third slide label</h5>
+      <p>bath</p>
+      </div>
     </div>
-  <div class="carousel-item">
+    <div class="carousel-item">
       <img class="d-block w-100" src="images/picture4.jpeg" alt="Fourth slide">
+      <h5>Fourth slide label</h5>
+      <p>places</p>
+      </div>
     </div>
-  <div class="carousel-item">
+    <div class="carousel-item">
       <img class="d-block w-100" src="images/picture5.jpeg" alt="Fifth slide">
+      <h5>Fitfh slide label</h5>
+      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
     </div>
   </div>
-
 </div>
-
-
 
 
   <div id="ordered-list">
