--- a/index.html
+++ b/index.html
@@ -44,45 +44,44 @@
   </div>
 
 
-
-
-
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-
-
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="images/picture1.jpeg" alt="First slide">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="images/picture1.jpeg" alt="First slide">
         <div class="carousel-caption d-none d-md-block">
           <h5>First slide label</h5>
           <p>eating is life</p>
         </div>
-    </div>
-    <div class="carousel-item">
-       <img class="d-block w-100" src="images/picture2.jpeg" alt="Second slide">
-        <h5>Second slide label</h5>
-        <p>blablabla</p>
       </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="images/picture2.jpeg" alt="Second slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Second slide label</h5>
+          <p>blablabla</p>
+        </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="images/picture3.jpeg" alt="Third slide">
-      <h5>Third slide label</h5>
-      <p>bath</p>
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+        <p>bath</p>
       </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="images/picture4.jpeg" alt="Fourth slide">
-      <h5>Fourth slide label</h5>
-      <p>places</p>
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Fourth slide label</h5>
+        <p>places</p>
       </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="images/picture5.jpeg" alt="Fifth slide">
+      <div class="carousel-caption d-none d-md-block">
       <h5>Fitfh slide label</h5>
       <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+      </div>
     </div>
   </div>
-</div>
 
 
   <div id="ordered-list">
