--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-
+  <div transition: transform 1s ease
 
   <div class="carousel-inner">
     <div class="carousel-item active">
