--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 
 
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div transition: transform 2s>
+  </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img class="d-block w-100" src="images/picture1.jpeg" alt="First slide">
