--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-  <div transition: transform 1s ease
+  <div transition: transform 2s ease
 
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -58,28 +58,33 @@
           <p>eating is life</p>
         </div>
     </div>
-    <div class="carousel-item">
-       <img class="d-block w-100" src="images/picture2.jpeg" alt="Second slide">
+  <div class="carousel-item">
+      <img class="d-block w-100" src="images/picture2.jpeg" alt="Second slide">
+        <div class="carousel-caption d-none d-md-block">
         <h5>Second slide label</h5>
         <p>blablabla</p>
       </div>
     </div>
-    <div class="carousel-item">
+  <div class="carousel-item">
+      <div class="carousel-caption d-none d-md-block">
       <img class="d-block w-100" src="images/picture3.jpeg" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
       <h5>Third slide label</h5>
       <p>bath</p>
       </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="images/picture4.jpeg" alt="Fourth slide">
+      <div class="carousel-caption d-none d-md-block">
       <h5>Fourth slide label</h5>
       <p>places</p>
       </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="images/picture5.jpeg" alt="Fifth slide">
+      <div class="carousel-caption d-none d-md-block">
       <h5>Fitfh slide label</h5>
-      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+      <p>wow</p>
     </div>
   </div>
 </div>
