Revert "updqte carousel"
This reverts commit 8da68b128f731927bc4b3576e61556044c6ba62f.

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
       </div>
     </div>
   <div class="carousel-item">
+      <div class="carousel-caption d-none d-md-block">
       <img class="d-block w-100" src="images/picture3.jpeg" alt="Third slide">
       <div class="carousel-caption d-none d-md-block">
       <h5>Third slide label</h5>
