--- a/Our_Favourites.html
+++ b/Our_Favourites.html
@@ -44,8 +44,21 @@
   <br>
   <br>
   <br>
-  <div class="map of dessert places">
+  <div class="dessert places">
     <h2> What's your favourite type of dessert? </h2>
+
+    <div class="row">
+      <div class="col-sm">
+        <img src="images/ice_cream.jpg" width="200px"
+      </div>
+      <div class="col-sm">
+        <img src="images/cupcake.jpg" width="200px"
+      </div>
+      <div class="col-sm">
+        <img src="images/cookies.jpeg" width="200px"
+      </div>
+    </div>
+
 
 
     <button type="button" class="btn btn-info" id="map">Show me on a map!</button>
