made images round and side by side

--- a/Our_Favourites.html
+++ b/Our_Favourites.html
@@ -44,22 +44,20 @@
   <br>
   <br>
   <br>
-  <div class="dessert places">
+  <div class="dessert_places">
     <h2> What's your favourite type of dessert? </h2>
 
-    <div class="row">
-      <div class="col-sm">
-        <img src="images/ice_cream.jpg" width="200px"
+    <div class="clearfix">
+      <div class="img-container">
+        <img src="images/ice_cream.jpg" alt="ice-cream" style="width:100%">
       </div>
-      <div class="col-sm">
-        <img src="images/cupcake.jpg" width="200px"
+      <div class="img-container">
+        <img src="images/cupcake.jpg" alt="cup-cake" style="width:100%">
       </div>
-      <div class="col-sm">
-        <img src="images/cookies.jpeg" width="200px"
+      <div class="img-container">
+        <img src="images/cookies.jpeg" alt="cookies" style="width:100%">
       </div>
     </div>
-
-
 
     <button type="button" class="btn btn-info" id="map">Show me on a map!</button>
     <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1u84eFgncUFvR34t2kHtYeeJ_OLzeveEI" width="640" height="480"></iframe>
