added info sections

--- a/Our_Favourites.html
+++ b/Our_Favourites.html
@@ -50,7 +50,7 @@
     <div class="clearfix">
       <div class="img-container">
         <img src="images/ice_cream.jpg" alt="ice-cream" style="width:100%">
-      </div>
+        </div>
       <div class="img-container">
         <img src="images/cupcake.jpg" alt="cup-cake" style="width:100%">
       </div>
@@ -58,10 +58,65 @@
         <img src="images/cookies.jpeg" alt="cookies" style="width:100%">
       </div>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    
+    <div class="info"
+
+      <h2> Dr Gelato </h2>
+      <p>insert text
+      </p>
+      <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+      </ul>
+
+      <h2> Swoon </h2>
+      <p>insert text
+      </p>
+      <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+      </ul>
+
+      <h2> The Cakery </h2>
+      <p>insert text
+      </p>
+      <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+      </ul>
+
+      <h2> DidiCakes </h2>
+      <p>insert text
+      </p>
+      <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+      </ul>
+
+      <h2> Ben's Cookies </h2>
+      <p>insert text
+      </p>
+      <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+      </ul>
+
+    </div>
 
     <button type="button" class="btn btn-info" id="map">Show me on a map!</button>
     <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1u84eFgncUFvR34t2kHtYeeJ_OLzeveEI" width="640" height="480"></iframe>
   </div>
+
+
 
   <script src="js/background.js"></script>
 </body>
