--- a/Our_Favourites.html
+++ b/Our_Favourites.html
@@ -50,7 +50,7 @@
     <div class="clearfix">
       <div class="img-container">
         <img src="images/ice_cream.jpg" alt="ice-cream" style="width:100%">
-        </div>
+      </div>
       <div class="img-container">
         <img src="images/cupcake.jpg" alt="cup-cake" style="width:100%">
       </div>
@@ -62,10 +62,14 @@
     <br>
     <br>
     <br>
-    
-    <div class="info"
+  </div>
+
+  <div class="info"
+
+  <div class="ice-cream-info"
 
       <h2> Dr Gelato </h2>
+      <img src="images/drgelato.jpg">
       <p>insert text
       </p>
       <ul>
@@ -82,6 +86,10 @@
         <li>2</li>
         <li>3</li>
       </ul>
+
+    </div>
+
+    <div class="cake-info"
 
       <h2> The Cakery </h2>
       <p>insert text
@@ -101,6 +109,10 @@
         <li>3</li>
       </ul>
 
+    </div>
+
+    <div class="cookies-info"
+
       <h2> Ben's Cookies </h2>
       <p>insert text
       </p>
@@ -109,12 +121,14 @@
         <li>2</li>
         <li>3</li>
       </ul>
+    </div>
 
     </div>
 
+    <div class="map_section">
     <button type="button" class="btn btn-info" id="map">Show me on a map!</button>
     <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1u84eFgncUFvR34t2kHtYeeJ_OLzeveEI" width="640" height="480"></iframe>
-  </div>
+    </div>
 
 
 
