--- a/Our_Favourites.html
+++ b/Our_Favourites.html
@@ -79,6 +79,7 @@
       </ul>
 
       <h2> Swoon </h2>
+      <img src="images/swoon.jpg"
       <p>insert text
       </p>
       <ul>
@@ -92,6 +93,7 @@
     <div class="cake-info"
 
       <h2> The Cakery </h2>
+      <img src="images/thecakery.jpg"
       <p>insert text
       </p>
       <ul>
@@ -101,6 +103,7 @@
       </ul>
 
       <h2> DidiCakes </h2>
+      <img src="images/didicakes.jpg"
       <p>insert text
       </p>
       <ul>
@@ -114,6 +117,7 @@
     <div class="cookies-info"
 
       <h2> Ben's Cookies </h2>
+      <img src="images/benscookies.jpeg"
       <p>insert text
       </p>
       <ul>
