--- a/Our_Favourites.html
+++ b/Our_Favourites.html
@@ -64,9 +64,9 @@
     <br>
   </div>
 
-  <div class="info"
+  <div class="info">
 
-  <div class="ice-cream-info"
+    <div class="ice-cream-info">
 
       <h2> Dr Gelato </h2>
       <img src="images/drgelato.jpg">
@@ -79,7 +79,7 @@
       </ul>
 
       <h2> Swoon </h2>
-      <img src="images/swoon.jpg"
+      <img src="images/swoon.jpg">
       <p>insert text
       </p>
       <ul>
@@ -90,10 +90,10 @@
 
     </div>
 
-    <div class="cake-info"
+    <div class="cake-info">
 
       <h2> The Cakery </h2>
-      <img src="images/thecakery.jpg"
+      <img src="images/thecakery.jpg">
       <p>insert text
       </p>
       <ul>
@@ -103,7 +103,7 @@
       </ul>
 
       <h2> DidiCakes </h2>
-      <img src="images/didicakes.jpg"
+      <img src="images/didicakes.jpg">
       <p>insert text
       </p>
       <ul>
@@ -114,10 +114,10 @@
 
     </div>
 
-    <div class="cookies-info"
+    <div class="cookies-info">
 
       <h2> Ben's Cookies </h2>
-      <img src="images/benscookies.jpeg"
+      <img src="images/benscookies.jpeg">
       <p>insert text
       </p>
       <ul>
@@ -127,7 +127,7 @@
       </ul>
     </div>
 
-    </div>
+  </div>
 
     <div class="map_section">
     <button type="button" class="btn btn-info" id="map">Show me on a map!</button>
