added click to smooth scroll function

--- a/Our_Favourites.html
+++ b/Our_Favourites.html
@@ -48,13 +48,13 @@
     <h2> What's your favourite type of dessert? </h2>
 
     <div class="clearfix">
-      <div class="img-container">
+      <div class="img-container" id="1">
         <img src="images/ice_cream.jpg" alt="ice-cream" style="width:100%">
       </div>
-      <div class="img-container">
+      <div class="img-container" id="2">
         <img src="images/cupcake.jpg" alt="cup-cake" style="width:100%">
       </div>
-      <div class="img-container">
+      <div class="img-container" id="3">
         <img src="images/cookies.jpeg" alt="cookies" style="width:100%">
       </div>
     </div>
@@ -72,21 +72,13 @@
       <img src="images/drgelato.jpg">
       <p>insert text
       </p>
-      <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-      </ul>
+
 
       <h2> Swoon </h2>
       <img src="images/swoon.jpg">
       <p>insert text
       </p>
-      <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-      </ul>
+
 
     </div>
 
@@ -96,21 +88,13 @@
       <img src="images/thecakery.jpg">
       <p>insert text
       </p>
-      <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-      </ul>
+
 
       <h2> DidiCakes </h2>
       <img src="images/didicakes.jpg">
       <p>insert text
       </p>
-      <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-      </ul>
+
 
     </div>
 
@@ -120,11 +104,7 @@
       <img src="images/benscookies.jpeg">
       <p>insert text
       </p>
-      <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-      </ul>
+
     </div>
 
   </div>
