new cookie picture

--- a/Our_Favourites.html
+++ b/Our_Favourites.html
@@ -104,14 +104,14 @@
 
     <div class="cookies-info">
       <h2> Ben's Cookies </h2>
-      <img src="images/benscookies.jpeg">
+      <img src="images/benscookies2.jpg">
       <p>insert text
       </p>
 
       <br>
       <br>
       <br>
-  
+
     </div>
 
   </div>
