changed map so only shows when click button

--- a/Our_Favourites.html
+++ b/Our_Favourites.html
@@ -46,6 +46,8 @@
   <br>
   <div class="dessert_places">
     <h2> What's your favourite type of dessert? </h2>
+    <br>
+    <p> Pick your favourite to see our recommendations for you... </p>
 
     <div class="clearfix">
       <div class="img-container" id="1">
