--- a/Our_Favourites.html
+++ b/Our_Favourites.html
@@ -119,7 +119,7 @@
   </div>
 
     <div class="map_section">
-    <button type="button" class="btn btn-info" id="map">Show me on a map!</button>
+    <button type="button" class="btn btn-info" id="map">Show map</button>
     <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1u84eFgncUFvR34t2kHtYeeJ_OLzeveEI" width="640" height="480"></iframe>
     </div>
 
