changed button to description

--- a/Our_Favourites.html
+++ b/Our_Favourites.html
@@ -113,17 +113,23 @@
       <br>
       <br>
       <br>
+      <br>
+      <br>
+      <br>
+      <br>
 
     </div>
 
   </div>
 
     <div class="map_section">
-    <button type="button" class="btn btn-info" >Show map</button>
-
 
     <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1u84eFgncUFvR34t2kHtYeeJ_OLzeveEI" width="640" height="480"></iframe>
 
+    </div>
+
+    <div class="subscription_button">
+      <button type="button" class="btn btn-info" >Subscribe to our newsletter</button>
     </div>
 
 
