--- a/Our_Favourites.html
+++ b/Our_Favourites.html
@@ -35,9 +35,7 @@
         <li class="nav-item">
           <a class="nav-link active" href="Our_Favourites.html">Our Favourites</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Your Suggestions</a>
-        </li>
+
       </ul>
     </div>
   </nav>
@@ -132,7 +130,19 @@
       <button type="button" class="btn btn-info" >Subscribe to our newsletter</button>
     </div>
 
-
+    <form>
+      <h2> Have we missed one of your favourites? </h2>
+      <p> Let us know about any other places you think we should include! <p>
+      <div class="form-group">
+        <label for="suggestions">Dessert venue</label>
+        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Type name here">
+      </div>
+      <div class="form-group">
+        <label for="reason">Reason that it's your favourite</label>
+        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Give reason here">
+        <button type="submit" class="btn btn-primary" id="submit">Submit my suggestion</button>
+      </div>
+    </form>
 
 
 
