added map onto separate page

--- a/Our_Favourites.html
+++ b/Our_Favourites.html
@@ -35,6 +35,9 @@
         <li class="nav-item">
           <a class="nav-link active" href="Our_Favourites.html">Our Favourites</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="map.html">Map</a>
+        </li>
 
       </ul>
     </div>
@@ -120,11 +123,7 @@
 
   </div>
 
-    <div class="map_section">
 
-    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1u84eFgncUFvR34t2kHtYeeJ_OLzeveEI" width="640" height="480"></iframe>
-
-    </div>
 
     <div class="subscription_button">
       <button type="button" class="btn btn-info" >Subscribe to our newsletter</button>
@@ -140,6 +139,7 @@
       <div class="form-group">
         <label for="reason">Reason that it's your favourite</label>
         <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Give reason here">
+        <br>
         <button type="submit" class="btn btn-primary" id="submit">Submit my suggestion</button>
       </div>
     </form>
