--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
         <li class="nav-item">
           <a class="nav-link" href="Our_Favourites.html">Our Favourites</a>
         </li>
-        
+        <li class="nav-item">
+          <a class="nav-link" href="map.html">Map</a>
+        </li>
+
       </ul>
     </div>
   </nav>
