--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <div class="topic-title">
     <h1>BATH TREATS</h1>
-    <p class="lead"> Welcome to our site! </p>
+    <p class="text-info">WELCOME TO OUR DELICIOUS SITE</p>
   </div>
 
 
@@ -70,7 +70,7 @@
         <img class="d-block w-100" src="images/picture3.jpeg" alt="Third slide">
         <div class="carousel-caption d-none d-md-block">
           <h5>Isabelle Verrier</h5>
-          <p>One cannot think well, love well, sleep well, if one has not dined well.</p>
+          <p>"One cannot think well, love well, sleep well, if one has not dined well."</p>
         </div>
       </div>
       <div class="carousel-item">
