changed button colour and resized photo

--- a/Our_Favourites.html
+++ b/Our_Favourites.html
@@ -140,7 +140,7 @@
         <label for="reason">Reason that it's your favourite</label>
         <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Give reason here">
         <br>
-        <button type="submit" class="btn btn-primary" id="submit">Submit my suggestion</button>
+        <button type="submit" class="btn btn-secondary" id="submit">Submit my suggestion</button>
       </div>
     </form>
 
