updated about link

--- a/map.html
+++ b/map.html
@@ -52,3 +52,6 @@
 <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1u84eFgncUFvR34t2kHtYeeJ_OLzeveEI" width="640" height="480"></iframe>
 
 </div>
+
+<script src="js/background.js"></script>
+</body>
